# Sysy-compiler

./: .gitignore  CMakeLists.txt  README.md  hello.c  hello.ll  make_test.sh  test  test.bc  test.cpp  test.ll  test.py  test1  test_o  编译原理试点班实验报告.md
lib/: Makefile  sylib.ll
outs/: 00_arr_defn2.ll  01_var_defn.ll  02_arr_defn4.ll  02_var_defn2.ll  03_arr_defn.ll  03_var_defn2.ll  04_const_defn.ll  04_func_defn.ll  05_add.ll  05_const_array_defn.ll  06_mod.ll  06_var_defn_func.ll  07_comment1.ll  07_return_var.ll  08_arr_assign.ll  09_if.ll  09_void_func.ll  10_break.ll  10_if_else.ll  11_continue.ll  11_while.ll  12_array_traverse.ll  12_getint.ll  13_and.ll  14_or.ll  15_array_test3.ll  15_equal.ll  16_greater_eq.ll  16_nequal.ll  17_less.ll  17_less_eq.ll  18_cal_prio.ll  20_arr_sum.ll  21_suminput.ll  22_if_test1.ll  23_if_test2.ll  24_if_test3.ll  25_if_test4.ll  26_if_test5.ll  27_while_test1.ll  (+62 more)
src/: Ast.cpp  Ast.h  ConstantBranch.cpp  IR.cpp  IR.h  MyDCE.h  SSABuilder.cpp  SSABuilder.h  ast.cpp  ast.h  base_ast.h  main.cpp  param_list.cpp  param_list.h  passes.cpp  passes.h  preDeclareFunc.c  sysy.l  sysy.output  sysy.tab.c  sysy.y
